# fastapi-openapi-quickstart

./: Makefile  README.md  curl_endpoints.sh  openapi.yaml  pyproject.toml
app/: main.py  models.py
