[tool.poetry]
package-mode = false

[project]
name = "open-api-test"
version = "0.1.0"
description = ""
authors = [
    { name = "Michael Currin", email = "18750745+MichaelCurrin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
